<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tv_lay1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dj_image1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_dj_v1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/dh1"
                android:textColor="@color/color_balank"
                android:textSize="13.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_lay2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dj_image2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ashd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/dh2"
                android:textColor="@color/color_balank"
                android:textSize="13.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_lay3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dj_image3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/srtq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/dh3"
                android:textColor="@color/color_balank"
                android:textSize="13.0sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tv_lay4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/kftq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="客服特权\nV3可享"
                android:textColor="@color/color_balank"
                android:textSize="11.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_lay5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/fb"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="更多权益,敬请期待"
                android:textColor="@color/color_balank"
                android:textSize="16.0sp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
