<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <include layout="@layout/layout_title_activity" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/grade_user_head"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/grade_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/color_balank"
                        android:textSize="16.0sp" />

                    <FrameLayout
                        android:id="@+id/grade_hg_fay"
                        android:layout_width="20dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/hg" />

                        <TextView
                            android:id="@+id/grade_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/color_white"
                            android:textSize="12.0sp" />
                    </FrameLayout>
                </LinearLayout>


                <include layout="@layout/layout_leave" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_gray2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center_vertical">

                <View
                    android:layout_width="3dp"
                    android:layout_height="15dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的权益"
                    android:textColor="@color/color_balank"
                    android:textSize="16.0sp" />
            </LinearLayout>


            <include layout="@layout/layout_leave_two" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/grade_recyler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone" />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_gray2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="3dp"
                    android:layout_height="15dp"
                    android:layout_margin="10dp"
                    android:background="@color/color_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="等级定义"
                    android:textColor="@color/color_balank"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/v1"
                        android:textSize="14.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/v3"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/v2"
                        android:textSize="14.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/v4"

                        android:textSize="14.0sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_gray0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="15dp"
                        android:layout_margin="10dp"
                        android:background="@color/color_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="等级攻略"
                        android:textColor="@color/color_balank"
                        android:textSize="16.0sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1、完成信息认证"
                        android:textColor="@color/color_balank"
                        android:textSize="14.0sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/jyz1" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2、完成新人任务"
                        android:textColor="@color/color_balank"
                        android:textSize="14.0sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/jyz2" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3、内容产出"
                        android:textColor="@color/color_balank"
                        android:textSize="14.0sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="340dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/jyz3" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/tx"
                    android:drawablePadding="10dp"
                    android:text="@string/tx"
                    android:textColor="@color/color_balank"
                    android:textSize="16.0sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/tx"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/tx"
                        android:drawablePadding="10dp"
                        android:text="@string/tx"
                        android:textColor="@color/color_balank"
                        android:textSize="16.0sp" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
